[gd_scene load_steps=3 format=2]

[ext_resource path="res://classes/Item.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

[node name="Item" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Area2D" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
shape = SubResource( 1 )

[connection signal="input_event" from="Sprite/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Sprite/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Sprite/Area2D" to="." method="_on_Area2D_mouse_exited"]
